--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "antd": "^5.17.4",
     "axios": "^1.6.7",
     "next": "14.1.2",
     "react": "^18",
