add projects form

--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/prod?schema=public"
+DATABASE_URL="postgresql://postgres:1234@db/prod?schema=public"
 JWT_SECRET="klmdv09j056g09g54wgfdl"
