--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,7 @@
 FROM postgres:16.1-alpine3.19
 
 ENV POSTGRES_PASSWORD=1234 
+ENV POSTGRES_USER=postgres
 ENV POSTGRES_DB=prod
 ENV POSTGRES_ENCODING=UTF-8
 
