--- a/back/.env.production
+++ b/back/.env.production
@@ -1,3 +1,3 @@
-PORT=7000
-DATABASE_URL="postgresql://postgres:1234@172.17.0.1:5432/prod?schema=public"
+PORT=5000
+DATABASE_URL="postgresql://postgres:1234@db/prod?schema=public"
 JWT_SECRET="klmdv09j056g09g54wgfdl"
